--- a/assignment-1/requirements.txt
+++ b/assignment-1/requirements.txt
@@ -1,6 +1,6 @@
-pandas==2.2.1
+codecarbon==2.3.5
+en_core_web_lg==3.7.1
+en_core_web_md==3.7.1
+en_core_web_sm==3.7.1
+pandas==2.2.2
 spacy==3.7.4
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
-en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl
-
