--- a/assignment-2/requirements.txt
+++ b/assignment-2/requirements.txt
@@ -1,5 +1,6 @@
-joblib==1.3.2
+joblib==1.4.2
+matplotlib==3.8.4
 numpy==1.26.4
 pandas==2.2.2
-scikit_learn==1.4.1.post1
+scikit_learn==1.4.2
 scipy==1.13.0
